welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	var vuBiscuit()=false
            ^Program:4: error: not found: value estsurBiscuit
		if (estsurBiscuit()==true) {
                    ^Program:5: error: not found: value vuBiscuit
			vuBiscuit=true
                        ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
	for (i <- 1 to 6) {
               ^