welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit()=false
	for (i <- 1 to 6) {
		if (estsurBiscuit()==true) {
			vuBiscuit=true
			avance()
		} else {
			avance()
		}
	}
}

